--- a/src/components/title-page/title-page.scss
+++ b/src/components/title-page/title-page.scss
@@ -433,8 +433,8 @@
   .title-info {
     display: block;
     .title-poster {
-      width: 90vw;
-      height: 90vw;
+      width: 300px;
+      height: 400px;
     }
     .title-text-info {
       width: 90vw;
@@ -479,5 +479,11 @@
   }
   .comment-send {
     margin-left: 30%;
+  }
+  .player-options,
+  .dub-options,
+  .player-option,
+  .dub-option {
+    width: 30vw;
   }
 }
