--- a/src/components/header/mobile-meu/mobileMenu.css
+++ b/src/components/header/mobile-meu/mobileMenu.css
@@ -17,14 +17,13 @@
   align-self: flex-start;
   margin-bottom: 20px;
   height: 40px;
+  min-height: 40px;
   width: 40px;
   border-radius: 3px;
   border: 1px solid #3ce3e8;
   background-color: #05315a;
   color: white;
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-  border-radius: 5px;
-  transition: 100s;
 }
 .mobile-menu-wrapper .menu-user {
   width: 90%;
