--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -72,8 +72,8 @@
 .title-episodes {
   position: relative;
   font-size: 14px !important;
-  bottom: 47px;
-  left: 102px;
+  bottom: 4px;
+  left: 75px;
 }
 
 @media (max-width: 1100px) {
@@ -109,9 +109,13 @@
   }
   .title-name-tags {
     padding-top: 15px;
+    width: 65%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
   }
   .title-episodes {
-    top: 20px;
+    position: static;
   }
   .recently-added {
     width: 155px;
@@ -125,7 +129,6 @@
   }
   .recently-added .title-poster-wraper .poster {
     position: relative;
-    right: 26px;
     width: 100%;
     max-width: 155px;
     height: 100%;
@@ -144,5 +147,14 @@
   }
   .recently-added .title-name-tags .title-episodes {
     display: none;
+  }
+  .title-main:hover::after {
+    display: none;
+  }
+  .title-main:hover {
+    scale: 1.03;
+  }
+  .title-main:hover .poster {
+    filter: brightness(100%);
   }
 }/*# sourceMappingURL=title.css.map */
