--- a/src/components/catalogue-page/catalogue-page.css
+++ b/src/components/catalogue-page/catalogue-page.css
@@ -115,7 +115,7 @@
   padding-left: 5px;
   color: white;
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-  height: 120px;
+  height: 30px;
   margin-bottom: 10px;
 }
 
@@ -147,8 +147,8 @@
 .filter-option {
   display: inline-flex;
   width: 100%;
-  height: 50px;
-  font-size: 17px;
+  height: 30px;
+  font-size: 18px;
   align-items: center;
   padding-left: 5px;
   background-color: inherit;
@@ -187,6 +187,16 @@
 
 .filter-option:hover {
   background-color: #021e38;
+}
+
+.not-found-error {
+  color: rgb(243, 38, 38);
+  font-size: 20px;
+  font-weight: 800;
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 30px;
 }
 
 .titles-wraper {
