--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@ body {
   background-size: cover;
   background-color: #2179df;
   transition: 1s;
+  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+  color: white;
 }
 
 body::-webkit-scrollbar {
@@ -41,6 +43,8 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .captcha-window {
@@ -84,4 +88,4 @@ body::-webkit-scrollbar-thumb {
   .okami {
     min-height: 975px;
   }
-}/*# sourceMappingURL=App.css.map */
+}/*# sourceMappingURL=app.css.map */
