feedback done for now

--- a/src/App.css
+++ b/src/App.css
@@ -88,4 +88,4 @@ body::-webkit-scrollbar-thumb {
   .okami {
     min-height: 975px;
   }
-}/*# sourceMappingURL=app.css.map */
+}/*# sourceMappingURL=App.css.map */
