--- a/src/components/feedbeack-page/Feedback.scss
+++ b/src/components/feedbeack-page/Feedback.scss
@@ -49,12 +49,34 @@
   height: 50px;
   padding: 3px;
   font-size: 13px;
-  position: absolute;
+  position: fixed;
   top: 200px;
-  left: -40px;
+  left: -90px;
   font-family:
     Century Gothic,
     CenturyGothic,
     AppleGothic,
     sans-serif;
+  cursor: pointer;
+  transition: 0.6s;
+}
+.feedback-button:hover,
+.feedback-button:active {
+  left: -40px;
+  .feedback-button-img {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.feedback-button-img {
+  transform: rotate(90deg);
+  border: 1px solid #3ce3e8;
+  border-left: none;
+  background-color: #05315a;
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  margin-top: 14px;
+  transition: 0.2s;
+  padding-left: 10px;
 }
