--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1200px;
+  max-width: 1350px;
   margin: 0 auto;
 }
 
@@ -88,4 +88,4 @@ body::-webkit-scrollbar-thumb {
   .okami {
     min-height: 975px;
   }
-}/*# sourceMappingURL=App.css.map */
+}/*# sourceMappingURL=app.css.map */
