--- a/src/components/feedbeack-page/Feedback.scss
+++ b/src/components/feedbeack-page/Feedback.scss
@@ -66,6 +66,7 @@
   .feedback-button-img {
     opacity: 0;
     visibility: hidden;
+    transform: translateY(-40px) rotate(90deg);
   }
 }
 .feedback-button-img {
