--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -179,6 +179,35 @@
   color: #000000;
 }
 
+.up-button {
+  position: fixed;
+  right: 95px;
+  bottom: 130px;
+  width: 50px;
+  height: 50px;
+  background-color: #05315a;
+  border: 1px solid #3ce3e8;
+  border-radius: 50%;
+  animation-name: appear-button;
+  animation-duration: 0.5s;
+  cursor: pointer;
+}
+
+.up-button-arrow {
+  width: 40px;
+  height: 40px;
+}
+
+@keyframes appear-button {
+  0% {
+    opacity: 0;
+    scale: 0.5;
+  }
+  100% {
+    opacity: 1;
+    scale: 1;
+  }
+}
 @media (max-width: 1100px) {
   .header {
     justify-content: space-evenly;
@@ -242,6 +271,9 @@
   .mobile-header-search {
     margin-top: -20px;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
     width: 80vw;
     background-color: rgba(6, 75, 140, 0.8);
     margin-bottom: 10px;
