pagination started doing

--- a/src/components/catalogue-page/catalogue-page.scss
+++ b/src/components/catalogue-page/catalogue-page.scss
@@ -204,6 +204,7 @@
   gap: 20px;
   padding: 0 20px 0 20px;
   min-height: 1500px;
+  margin-bottom: 20px;
 }
 .filter-span {
   margin-bottom: 30px;
