pagination finished i think

--- a/src/components/catalogue-page/Pagination/Pagination.css
+++ b/src/components/catalogue-page/Pagination/Pagination.css
@@ -13,10 +13,12 @@
 }
 
 .catalogue-pagination {
-  width: 70%;
+  width: -moz-fit-content;
+  width: fit-content;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  gap: 10px;
 }
 
 .pagination-button {
