--- a/src/components/catalogue-page/Pagination/Pagination.scss
+++ b/src/components/catalogue-page/Pagination/Pagination.scss
@@ -5,10 +5,16 @@
   margin-bottom: 20px;
 }
 .pagination-load-more {
-  width: 80%;
+  width: 20vw;
   height: 30px;
   margin: 0 auto;
   margin-bottom: 10px;
+  border: 1px solid #3ce3e8;
+  background-color: #05315a;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
 }
 .catalogue-pagination {
   width: fit-content;
@@ -24,6 +30,7 @@
   background-color: #05315a;
   color: white;
   border-radius: 5px;
+  cursor: pointer;
 }
 .pagination-button.active {
   background-color: #3ce3e8;
