--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   max-width: 1350px;
   margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 .captcha-window {
@@ -86,6 +87,6 @@ body::-webkit-scrollbar-thumb {
 
 @media (min-width: 1100px) {
   .okami {
-    min-height: 975px;
+    min-height: 730px;
   }
-}/*# sourceMappingURL=App.css.map */
+}/*# sourceMappingURL=app.css.map */
