--- a/src/components/catalogue-page/catalogue-page.scss
+++ b/src/components/catalogue-page/catalogue-page.scss
@@ -1,3 +1,5 @@
+@import "../../stylsheet.scss";
+
 .catalogue-page {
   min-height: 680px;
   display: grid;
@@ -23,16 +25,16 @@
 .filter-header {
   width: inherit;
   height: 50px;
-  border-bottom: 2px solid #3ce3e8;
+  border-bottom: 2px solid $base-light-blue;
   margin-bottom: 50px;
   padding-left: 15px;
   justify-content: space-around;
   display: flex;
   align-items: center;
   .close-mobile-filter {
-    background-color: #05315a;
+    background-color: $base-dark-blue;
     border-radius: 3px;
-    border: 1px solid #3ce3e8;
+    border: 1px solid $base-light-blue;
     width: 30px;
     height: 30px;
   }
@@ -62,8 +64,8 @@
   overflow: visible;
   position: relative;
   .filter-toggle {
-    border: 1px solid #3ce3e8;
-    background-color: #05315a;
+    border: 1px solid $base-light-blue;
+    background-color: $base-dark-blue;
     height: 50px;
     color: white;
     font-family:
@@ -97,7 +99,7 @@
   display: flex;
   flex-direction: column;
   width: 290px;
-  background-color: #05315a;
+  background-color: $base-dark-blue;
   border-radius: 0 0 5px 5px;
   position: relative;
   z-index: 10;
@@ -132,7 +134,7 @@
 }
 .filter-list::-webkit-scrollbar-track {
   width: 10px;
-  background: #05315a;
+  background: $base-dark-blue;
 }
 .filter-list::-webkit-scrollbar-thumb {
   background-color: #2179df; /* цвет плашки */
@@ -161,7 +163,7 @@
     margin-right: 10px;
   }
   .option-checkbox.inactive {
-    background-color: #3ce3e8;
+    background-color: $base-light-blue;
   }
   .option-checkbox.add-option {
     background-color: #2eaf79;
@@ -229,7 +231,7 @@
 .filter-button-wraper {
   width: 100%;
   height: 75px;
-  border-top: 2px solid #3ce3e8;
+  border-top: 2px solid $base-light-blue;
   margin-top: auto;
   margin-top: 35px;
   padding-top: 11px;
@@ -243,7 +245,7 @@
     font-weight: 400;
     width: 200px;
     height: 50px;
-    background-color: #3ce3e8;
+    background-color: $base-light-blue;
     color: black;
     font-size: 25px;
     border: none;
@@ -279,7 +281,7 @@
   width: 95%;
   height: 4px;
   border-radius: 6px;
-  background-color: #3ce3e8;
+  background-color: $base-light-blue;
   margin-left: auto;
   margin-right: auto;
 }
@@ -293,8 +295,8 @@
   height: 4px;
 }
 .slider-thumb {
-  background-color: #05315a;
-  color: #05315a;
+  background-color: $base-dark-blue;
+  color: $base-dark-blue;
   width: 20px;
   height: 30px;
   text-align: center;
@@ -302,7 +304,7 @@
   padding-top: 5px;
   border-radius: 2px;
   top: -18px;
-  border: 1px solid #3ce3e8;
+  border: 1px solid $base-light-blue;
   cursor: -webkit-grab;
   cursor: grab;
 }
@@ -315,7 +317,7 @@
   position: relative;
   bottom: 35px;
   right: 10px;
-  background: #3ce3e8;
+  background: $base-light-blue;
   background-size: 40px;
   border-radius: 3px;
   padding: 2px;
@@ -391,7 +393,7 @@
     color: white;
     border-radius: 5px;
     border: none;
-    background-color: #05315a;
+    background-color: $base-dark-blue;
     height: 50px;
     margin-bottom: 10px;
     border: 1px solid #39f3fa;
@@ -403,7 +405,7 @@
   .background {
     width: 1000px;
     height: 1000px;
-    background-color: #05315a;
+    background-color: $base-dark-blue;
     position: fixed;
     top: 0;
     z-index: 100000;
