--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,11 +1,13 @@
+@import "../../stylsheet.scss";
+
 .header {
   margin-top: 25px;
   width: 100%;
   height: 60px;
   color: white;
   display: flex;
-  border-top: 2px solid #3ce3e8;
-  border-bottom: 2px solid #3ce3e8;
+  border-top: 2px solid $base-light-blue;
+  border-bottom: 2px solid $base-light-blue;
   align-items: center;
   font-family: "Inter", sans-serif;
   justify-content: center;
@@ -26,7 +28,7 @@
 
   margin-bottom: 40px;
   .active {
-    background-color: #3ce3e8;
+    background-color: $base-light-blue;
     color: #000000;
   }
 }
@@ -50,7 +52,7 @@
     transition: 0.3s;
   }
   a:hover {
-    background-color: #3ce3e8;
+    background-color: $base-light-blue;
     color: #000000;
   }
 }
@@ -90,7 +92,7 @@
 .logo::before {
   content: " ";
   width: 10px;
-  background-color: #3ce3e8;
+  background-color: $base-light-blue;
   height: 36px;
   border-radius: 3px;
   position: relative;
@@ -98,7 +100,7 @@
   transition: 0.3s;
 }
 .img-background {
-  background-color: #3ce3e8;
+  background-color: $base-light-blue;
   scale: 1.2;
   border-radius: 6px;
   box-shadow: 0.5px 1px 0 1px rgba($color: #000000, $alpha: 0.2);
@@ -114,7 +116,7 @@
 }
 .logo-title {
   color: #333;
-  background-color: #3ce3e8;
+  background-color: $base-light-blue;
   align-self: center;
   font-size: 18px;
   border-radius: 3px;
@@ -167,7 +169,7 @@
     margin-left: 20px;
   }
   a:hover {
-    background-color: #3ce3e8;
+    background-color: $base-light-blue;
     color: #000000;
   }
 }
@@ -177,8 +179,8 @@
   bottom: 200px;
   width: 50px;
   height: 50px;
-  background-color: #05315a;
-  border: 1px solid #3ce3e8;
+  background-color: $base-dark-blue;
+  border: 1px solid $base-light-blue;
   border-radius: 50%;
   animation-name: appear-button;
   animation-duration: 0.5s;
@@ -215,8 +217,8 @@
     height: 40px;
     width: 40px;
     border-radius: 3px;
-    border: 1px solid #3ce3e8;
-    background-color: #05315a;
+    border: 1px solid $base-light-blue;
+    background-color: $base-dark-blue;
     color: white;
     font-family:
       Century Gothic,
@@ -260,7 +262,7 @@
   .line-burger {
     width: 32px;
     height: 3px;
-    background-color: #3ce3e8;
+    background-color: $base-light-blue;
     border-radius: 2px;
   }
   .mobile-header-search {
@@ -270,7 +272,7 @@
     margin-right: auto;
     padding: 10px;
     width: 80vw;
-    background-color: rgba(6, 75, 140, 0.8);
+    background-color: $background-trans;
     margin-bottom: 10px;
     border-radius: 6px;
     display: flex;
