--- a/src/components/header/mobile-meu/mobileMenu.scss
+++ b/src/components/header/mobile-meu/mobileMenu.scss
@@ -1,3 +1,5 @@
+@import "../../../stylsheet.scss";
+
 .mobile-menu-wrapper {
   width: 100%;
   height: 100%;
@@ -23,8 +25,8 @@
     min-height: 40px;
     width: 40px;
     border-radius: 3px;
-    border: 1px solid #3ce3e8;
-    background-color: #05315a;
+    border: 1px solid $base-light-blue;
+    background-color: $base-dark-blue;
     color: white;
     font-family:
       Century Gothic,
@@ -82,8 +84,8 @@
   gap: 5px;
   align-items: center;
   .menu-navigation-button {
-    border: 1px solid #3ce3e8;
-    background-color: #05315a;
+    border: 1px solid $base-light-blue;
+    background-color: $base-dark-blue;
     height: 50px;
     color: white;
     border-radius: 5px;
