--- a/src/components/profile-page/profile-page.scss
+++ b/src/components/profile-page/profile-page.scss
@@ -1,3 +1,5 @@
+@import "../../stylsheet.scss";
+
 .profile {
   width: 65vw;
   height: -webkit-fit-content;
@@ -23,7 +25,7 @@
     border-bottom: 3px solid rgba(5, 49, 90, 1);
     height: 50px;
     color: black;
-    background-color: #3ce3e8;
+    background-color: $base-light-blue;
     transform: translateY(3px);
     border-radius: 2px;
     transition: 0.4s;
@@ -33,10 +35,10 @@
 .profile-lsit {
   background-color: rgba(5, 49, 90, 0.6);
   height: 640px;
-  border-bottom: 1px solid #3ce3e8;
-  border-left: 1px solid #3ce3e8;
-  border-right: 1px solid #3ce3e8;
-  border-top: 3px solid #3ce3e8;
+  border-bottom: 1px solid $base-light-blue;
+  border-left: 1px solid $base-light-blue;
+  border-right: 1px solid $base-light-blue;
+  border-top: 3px solid $base-light-blue;
 }
 .profile-main {
   padding: 10px;
