--- a/src/components/signup-page/signupPage.css
+++ b/src/components/signup-page/signupPage.css
@@ -35,8 +35,10 @@
   border: none;
   border-radius: 6px;
   font-size: 18px;
-  width: 200px;
-  height: 40px;
+  width: 250px;
+  height: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
   cursor: pointer;
 }
@@ -53,6 +55,19 @@
 .error-message-input {
   color: rgb(243, 38, 38);
   margin-top: 10px;
+}
+
+.personal-info {
+  display: flex;
+  width: 450px;
+  margin: 0 auto;
+  font-size: 16px;
+}
+
+.personal-info-cb {
+  margin-right: 5px;
+  width: 20px;
+  height: 20px;
 }
 
 @media (max-width: 1100px) {
