--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -1,3 +1,5 @@
+@import "stylsheet";
+
 .title-main {
   height: 340px;
   width: 190px;
@@ -27,7 +29,7 @@
   }
   .status,
   .age-rest {
-    background-color: #3ce3e8;
+    background-color: $base-light-blue;
     position: absolute;
     z-index: 1000;
     color: black;
@@ -76,7 +78,7 @@
 @media (max-width: 1100px) {
   .title-main {
     display: flex;
-    background-color: rgba(6, 75, 140, 0.8);
+    background-color: $background-trans;
     .title-poster-wraper {
       width: 100px;
       height: 125px;
