changing profile page

--- a/src/App.css
+++ b/src/App.css
@@ -89,4 +89,4 @@ body::-webkit-scrollbar-thumb {
   .okami {
     min-height: 730px;
   }
-}/*# sourceMappingURL=app.css.map */
+}/*# sourceMappingURL=App.css.map */
