some api and api connections

--- a/src/components/title-page/title-page.scss
+++ b/src/components/title-page/title-page.scss
@@ -195,6 +195,16 @@
     border-bottom: 2px solid $base-light-blue;
     border-right: 2px solid $base-light-blue;
     border-left: 1px solid $base-light-blue;
+    body {
+      background-color: white;
+    }
+  }
+}
+iframe {
+  html {
+    body {
+      background-color: white;
+    }
   }
 }
 
