--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -1,13 +1,12 @@
 .title-main {
-  height: 340px;
   width: 190px;
   transition: 0.5s;
-  height: 350px;
+  height: 400px;
   margin-top: 20px;
   overflow: hidden;
 }
 .title-main span {
-  font-size: 10px;
+  font-size: 14px;
 }
 .title-main .poster {
   height: 295px;
@@ -25,6 +24,7 @@
   overflow: hidden;
   position: relative;
   z-index: 2;
+  cursor: help;
 }
 .title-main .status,
 .title-main .age-rest {
@@ -39,21 +39,25 @@
   align-self: flex-end;
 }
 
-.title-main:hover .poster {
+.title-poster-wraper:hover .poster {
   filter: brightness(70%);
   scale: 1.03;
 }
 
-.title-main:hover::after {
-  content: url("../img/play-button-svgrepo-com.svg");
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  position: relative;
-  bottom: 220px;
-  left: 65px;
-  filter: brightness(130%);
+.title-poster-wraper:hover .play-button-wraper {
+  position: absolute;
   z-index: 2;
+  width: 0;
+  height: 0;
+  cursor: pointer;
+}
+.title-poster-wraper:hover .play-button-wraper::after {
+  content: url("../img/play-button-svgrepo-com.svg");
+  display: inline-block;
+  filter: brightness(130%);
+  position: relative;
+  top: 120px;
+  left: 65px;
 }
 
 .title-poster-wraper {
@@ -68,11 +72,17 @@
   display: none;
 }
 
+.title-name-tags {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-size: 14px;
+  height: 100px;
+}
+
 .title-episodes {
   position: relative;
-  font-size: 14px !important;
-  bottom: 4px;
-  left: 75px;
+  font-size: 14px;
 }
 
 @media (max-width: 1100px) {
@@ -107,6 +117,7 @@
     max-height: 55px;
   }
   .title-name-tags {
+    display: flex;
     padding-top: 15px;
     width: 65%;
     height: 100%;
