--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -197,6 +197,14 @@
   border-right: 2px solid #3ce3e8;
   border-left: 1px solid #3ce3e8;
 }
+.player-wraper .player body,
+.player-wraper .player-placeholder body {
+  background-color: white;
+}
+
+iframe html body {
+  background-color: white;
+}
 
 .header-tab {
   border-radius: 3px 3px 0 0;
