--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -129,11 +129,19 @@
 .input-title {
   background: none;
   border: none;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid $base-light-blue;
   width: 220px;
   height: 40px;
   color: white;
   font-size: 23px;
+  padding: 5px;
+  transition: 0.5s;
+}
+.input-title:focus {
+  outline: none;
+  background-color: $base-light-blue;
+  color: black;
+  border-radius: 5px;
 }
 .header-profile {
   margin-left: 110px;
