--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,17 @@
   box-sizing: border-box;
 }
 
-body {
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
-  align-items: center;
-  background: url("./components/img/bacground19201080.webp") fixed;
+  z-index: -10;
+  background: url("./components/img/bacground19201080.webp") no-repeat center center;
   background-size: cover;
-  top: 0px;
-  left: 0px;
-  z-index: -1;
-  background-position: center;
-  background-size: cover;
-  background-color: #2179df;
-  transition: 1s;
-  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-  color: white;
 }
 
 body::-webkit-scrollbar {
