--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,13 @@ body:before {
   position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: -10;
   background: url("./components/img/bacground19201080.webp") no-repeat center center;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 body::-webkit-scrollbar {
