--- a/src/app.scss
+++ b/src/app.scss
@@ -31,8 +31,8 @@ body:before {
   position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: -10;
   background: url("./components/img/bacground19201080.webp") no-repeat center
     center;
@@ -40,6 +40,8 @@ body:before {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 body::-webkit-scrollbar {
   width: 10px; /* ширина scrollbar */
