--- a/src/components/catalogue-page/Pagination/Pagination.css
+++ b/src/components/catalogue-page/Pagination/Pagination.css
@@ -35,6 +35,9 @@
   color: white;
   border-radius: 5px;
   cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  padding-top: 4px;
 }
 
 .pagination-button.active {
