--- a/src/components/catalogue-page/Pagination/Pagination.scss
+++ b/src/components/catalogue-page/Pagination/Pagination.scss
@@ -33,6 +33,9 @@
   color: white;
   border-radius: 5px;
   cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  padding-top: 4px;
 }
 .pagination-button.active {
   background-color: $base-light-blue;
