--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -13,11 +13,9 @@
 
 .season-titles,
 .recently-added-titles {
-  min-width: 300px;
+  min-width: 1305px;
   max-width: -moz-fit-content;
   max-width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
   height: 440px;
   background-color: rgba(6, 75, 140, 0.8);
   padding: 0 20px 20px 20px;
@@ -52,6 +50,13 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
+}
+
+.ad {
+  position: fixed;
+  right: 25px;
+  top: 220px;
+  display: none;
 }
 
 @media (max-width: 1100px) {
