--- a/src/app.scss
+++ b/src/app.scss
@@ -5,26 +5,21 @@
   box-sizing: border-box;
 }
 
-// body {
-//   width: 100%;
-//   height: 100%;
-//   align-items: center;
-//   background: url("./components/img/bacground19201080.webp") fixed;
-//   background-size: cover;
-//   top: 0px;
-//   left: 0px;
-//   z-index: -1;
-//   background-position: center;
-//   background-size: cover;
-//   background-color: #2179df;
-//   transition: 1s;
-//   font-family:
-//     Century Gothic,
-//     CenturyGothic,
-//     AppleGothic,
-//     sans-serif;
-//   color: white;
-// }
+body {
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  background-color: #2179df;
+  transition: 1s;
+  font-family:
+    Century Gothic,
+    CenturyGothic,
+    AppleGothic,
+    sans-serif;
+  color: white;
+}
 body:before {
   content: "";
   display: block;
