--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,11 +4,25 @@
   background-color: rgba(0, 0, 0, 0.3);
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
   display: flex;
-  flex-direction: column;
   align-items: center;
   padding: 20px 10px;
   margin-top: auto;
   flex: 0;
+  justify-content: center;
+  padding-right: 230px;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-worning {
+  display: block;
+  width: 180px;
+  margin-right: 50px;
+  font-size: 15px;
 }
 
 .footer-links .link {
