--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -85,6 +85,33 @@
   font-size: 14px;
 }
 
+.search-result-title {
+  display: block;
+  height: 125px;
+  width: 100%;
+  margin: 0;
+}
+.search-result-title .title-status,
+.search-result-title .age-rest {
+  display: none;
+}
+.search-result-title .title-poster-wraper {
+  width: 100px;
+  height: 125px;
+}
+.search-result-title .title-poster-wraper .title-poster {
+  width: 100px;
+  height: 125px;
+}
+
+.search-result-title:hover .play-button-wraper {
+  display: none;
+}
+.search-result-title:hover .poster {
+  filter: brightness(70%);
+  scale: 1.03;
+}
+
 @media (max-width: 1100px) {
   .title-main {
     display: flex;
