--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   top: 0px;
   left: 0px;
@@ -18,6 +18,8 @@ body {
 }
 
 body:before {
+  width: 100%;
+  height: 100%;
   content: "";
   display: block;
   position: fixed;
