--- a/src/app.scss
+++ b/src/app.scss
@@ -6,7 +6,7 @@
 }
 
 body {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   top: 0px;
   left: 0px;
@@ -21,6 +21,8 @@ body {
   color: white;
 }
 body:before {
+  width: 100%;
+  height: 100%;
   content: "";
   display: block;
   position: fixed;
