--- a/src/app.scss
+++ b/src/app.scss
@@ -19,6 +19,8 @@ body {
     AppleGothic,
     sans-serif;
   color: white;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 body:before {
   width: 100%;
