--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ body {
   transition: 1s;
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
   color: white;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 body:before {
