--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -11,9 +11,12 @@
   right: 10px;
 }
 
+.season-anime {
+  max-width: 1305px;
+}
+
 .season-titles,
 .recently-added-titles {
-  min-width: 1305px;
   max-width: -moz-fit-content;
   max-width: fit-content;
   height: 440px;
@@ -64,6 +67,7 @@
     height: -moz-fit-content;
     height: fit-content;
     width: 100%;
+    max-width: 400px;
   }
   .season-anime .season-anime-title {
     margin-left: 30px;
